чуть чуть исправлений по мелочи