@@ -29,11 +29,11 @@ public class ArticleService {
     private final ArticleMapper articleMapper;
     private final ArticleQueryDslSearchService articleQueryDslSearchService;
 
-    public List<ArticleShortResponse> search(String searchLine, SearchBody searchBody) {
-        return articleQueryDslSearchService.search(searchLine, null).stream()
-                .filter(article -> article.getCategories() != null && article.getCategories().contains("articles"))
+    public List<ArticleShortResponse> search(final String searchLine, final SearchBody searchBody) {
+        return articleQueryDslSearchService.search(searchLine, searchBody)
+                .stream()
                 .map(articleMapper::toShort)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
